--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,11 @@ h6 {
   border-left: 12px solid #4D3620;
 }
 
+.prices {
+  padding-left: 5%;
+  padding-top: 28px;
+}
+
 .tab-pane {
   padding: 0 3% 0 36px;
 }
@@ -141,12 +146,21 @@ h6 {
   grid-template-columns: 1fr 1fr;
 }
 
-.form-check-input {
-
-}
-
 .form-check-input:checked {
   background-color: #5A7C86;
   border-color: #5A7C86;
+}
+
+.checkout-btn {
+  position: fixed;
+  bottom: 10vh;
+  left: 38%;
+  height: 58px;
+  width: 318px;
+  background: #5A7C86;
+  border: none;
+  border-radius: 37px;
+  color: white;
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
