--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* base styling */
 * {
   font-family: 'Nunito Sans','Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
@@ -37,6 +38,11 @@ h6 {
   font-size: 0.8em;
 }
 
+body {
+  color: #2B1812;
+}
+
+/* Top nav styling */
 #topNav {
   display: flex;
   flex-direction: row;
@@ -79,20 +85,22 @@ h6 {
   margin-right: 3px;
 }
 
+/* bootstrap row */
 .row {
   --bs-gutter-x: 0;
 }
 
+/* Left side tabs styling */
 .left-side {
   height: 100vh;
   background-color: #EEF2F3;
 }
 
-
 .cartTitle {
   text-align: center;
   background-color: #EEF2F3;
   padding: 24px 0px 12px 0px;
+  color: #4D3620;
 }
 
 .itemPic {
@@ -115,7 +123,7 @@ h6 {
 
 .list-group-item.active {
   z-index: 2;
-  color: #2B1812;
+  color: #4D3620;
   background-color:white;
   border-color: white;
   border-left: 12px solid #4D3620;
@@ -128,6 +136,11 @@ h6 {
 
 .tab-pane {
   padding: 0 3% 0 36px;
+}
+
+/* Right side item customization styling */
+.item-description {
+  margin-bottom: 40px;
 }
 
 .grid-container {
@@ -151,6 +164,17 @@ h6 {
   border-color: #5A7C86;
 }
 
+.option-price {
+  padding-left: 8px;
+}
+
+.quantity-icon {
+  padding-left: 16px;
+  padding-right: 16px
+}
+
+
+/* Button styling */
 .checkout-btn {
   position: fixed;
   bottom: 10vh;
